--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <script src="./Compile.js"></script>
     <script src="./MVue.js"></script>
     <script src="./official/vue.js"></script>
-    <script src="./_basic-router.js"></script>
+    <script src="./src/path-to-regexp.js"></script>
+    <!-- <script src="./_basic-router.js"></script> -->
+    <script src="./_improved-router.js"></script>
     <script>
       let vm = new MVue({
         el: "#app",
